kubernetes/clusters/proxmox/base/apps/ozoo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ozoo-service
spec:
  selector:
    app: ozoo
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
