kubernetes/clusters/proxmox/base/apps/ozoo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ozoo-ingress
  namespace: ozoo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: ozoo.antoinelemarchand.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ozoo-service
            port:
              number: 80
